# vpxtool

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  spirit_debug_log.txt  test.vpx
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: .rust.yml.swp  clippy.yml  release-gui.yml  release-plz.yml  release.yml  rust.yml
shared/: Cargo.toml
shared/src/: config.rs  indexer.rs  lib.rs  vpinball_config.rs
src/: atomicwrite.rs  backglass.rs  biff.rs  capture.rs  cli.rs  colorful_theme_patched.rs  config.rs  fixprint.rs  font.rs  frontend.rs  gamedata.rs  guifrontend.rs  guifrontend.rs.bak  image.rs  indexer.rs  jsonmodel.rs  lib.rs  lib.tst  main.rs  patcher.rs  scores.rs  simplefrontend.rs  sound.rs  tableinfo.rs  vpinball.rs  vpinball_config.rs  vpxz.rs
src/directb2s/: mod.rs
src/frontend/: app.rs  event.rs  mod.rs  state.rs  tui.rs  ui.rs  update.rs
src/guifrontend/: menus.rs
src/pov/: mod.rs
src/scores/: emhs.rs  glf.rs  vpreg.rs
src/tui/: mod.rs  state.rs  terminal.rs  ui.rs  update.rs
src/vpx/: biff.rs  collection.rs  color.rs  custominfotags.rs  expanded.rs  font.rs  gamedata.rs  gameitem.rs  image.rs  math.rs  mod.rs  model.rs  sound.rs  tableinfo.rs  version.rs
src/vpx/gameitem/: bumper.rs  collection.rs  color.rs  decal.rs  dragpoint.rs  flasher.rs  flipper.rs  font.rs  gate.rs  generic.rs  hittarget.rs  kicker.rs  light.rs  lightcenter.rs  lightsequencer.rs  plunger.rs  point.rs  primitive.rs  ramp.rs  reel.rs  rubber.rs  spinner.rs  table.rs  textbox.rs  timer.rs  trigger.rs  vertex2d.rs  vertex3d.rs  wall.rs
testdata/: completely_blank_table_10_7_4.vpx  test.legacy.pov  test.pov
tests/: abort_exit_code.rs  scores_fixtures.rs  vpx_read_write_compare_all.rs
tests/fixtures/: README.md  emhs_5plus5_8ball.txt  emhs_5plus5_carnaval.txt  emhs_5plus5_long_names.txt  emhs_5plus5_roller_coaster.txt  emhs_single_2in1.txt  emhs_single_4queens.txt  glf_dark_chaos.ini  vpreg_legacy_a_go_go_uppercase.ini  vpreg_legacy_abracadabra.ini  vpreg_modern_lochness_single_entry.ini  vpreg_modern_matrix.ini  vpreg_modern_name_before_n.ini  vpreg_modern_volkan_no_names.ini
vpxgui/: Cargo.toml
vpxgui/assets/shaders/: dot_matrix_shader.wgsl
vpxgui/src/: dmd.rs  dmd2.rs  event_channel.rs  flippers.rs  gradient_background.rs  guifrontend.rs  info.rs  lib.rs  list.rs  loading.rs  main.rs  menus.rs  music.rs  process.rs  wheel.rs  windowing.rs
vpxgui/src/guifrontend/: menus.rs
vpxtool/: Cargo.toml  assets
vpxtool/src/: frontend.rs  lib.rs
vpxtool/src/assets/: standup_target_class.vbs
vpxtool_cli/: Cargo.toml
vpxtool_cli/src/: backglass.rs  frontend.rs  lib.rs  main.rs
vpxtool_cli/src/assets/: drop_target_class.vbs
vpxtool_fe/: Cargo.toml
vpxtool_fe/src/: display.rs  gradient.rs  input.rs  main.rs  text.rs  vpinball.rs
vpxtool_gui/: Cargo.toml
vpxtool_gui/assets/shaders/: gradient_material.wgsl
vpxtool_gui/src/: debug_window_labels.rs  dmd.rs  event_channel.rs  flippers.rs  gradient_background.rs  guifrontend.rs  info.rs  lib.rs  list.rs  loading.rs  main.rs  music.rs  pipelines.rs  process.rs  wheel.rs  windowing.rs
vpxtool_gui/src/diagnostic/: mod.rs  system_information_diagnostics_plugin.rs
vpxtool_shared/: Cargo.toml
vpxtool_shared/src/: config.rs  indexer.rs  lib.rs  vpinball_config.rs
