[package]
name = "vpxtool"
edition = "2024"
version = "0.24.2"
license = "MIT"
description = "Terminal based frontend and utilities for Visual Pinball"
repository = "https://github.com/francisdb/vpxtool"
readme = "README.md"
documentation = "https://docs.rs/vpxtool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vpxtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive", "string"] }
colored = "3.0.0"
console = "0.16.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
# for the theme override
fuzzy-matcher = "0.3.7"
git-version = "0.3.9"
indicatif = "0.18.0"
jojodiff = "0.1.2"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
shellexpand = "3.1.1"
wild = "2.2.1"

is_executable = "1.0.5"
regex = { version = "1.11.2", features = [] }
vpin = { version = "0.18.0" }

edit = "0.1.5"
pinmame-nvram = "0.4.1"
image = "0.25.8"

#see https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
rust-ini = "0.21.3"
dirs = "6.0.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.5"
figment = { version = "0.10", features = ["toml", "env"] }
walkdir = "2.5.0"
rayon = "1.11.0"

[dev-dependencies]
testdir = "0.9.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"


[profile.test]
# level 0 is very slow for writing to compound files
# see https://github.com/mdsteele/rust-cfb/issues/42
opt-level = 1
