[package]
name = "vpxtool"
edition = "2024"
version = "0.33.1"
license = "MIT"
description = "Terminal based frontend and utilities for Visual Pinball"
repository = "https://github.com/francisdb/vpxtool"
readme = "README.md"
documentation = "https://docs.rs/vpxtool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vpxtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "string"] }
colored = "3.1.1"
console = "0.16.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
# for the theme override
fuzzy-matcher = "0.3.7"
git-version = "0.3.9"
indicatif = "0.18.4"
jojodiff = "0.1.2"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
wild = "2.2.1"

is_executable = "1.0.5"
regex = { version = "1.12.3", features = [] }
vpin = { version = "0.26.3" }
directb2s = "0.1.1"

edit = "0.1.5"
pinmame-nvram = "0.4.10"
image = { version = "0.25.10", default-features = false, features = [
    "bmp",
    "exr",
    "gif",
    "hdr",
    "jpeg",
    "png",
    "tga",
    "webp",
    "rayon",
] }
num-format = "0.4.4"

#see https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
rust-ini = "0.21.3"
dirs = "6.0.0"
toml = "1.1.2"
toml_edit = "0.25"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.10"
figment = { version = "0.10", features = ["toml", "env"] }
jwalk = "0.8.1"
rayon = "1.12.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
globset = "0.4.18"

# num-format's `with-system-locale` feature pulls a winapi path
# (`winapi::um::errhandlingapi`) without declaring the required winapi
# feature flag, breaking the Windows build. Upstream:
# https://github.com/bcmyers/num-format/issues/43 (open since 2023).
# Enable the feature only off-Windows; Windows falls back to a fixed
# Locale::en in the call sites.
[target.'cfg(not(windows))'.dependencies]
num-format = { version = "0.4.4", features = ["with-system-locale"] }

[dev-dependencies]
testdir = "0.9.3"
pretty_assertions = "1.4.1"
rand = "0.10.1"


[profile.test]
# level 0 is very slow for writing to compound files
# see https://github.com/mdsteele/rust-cfb/issues/42
opt-level = 1
