[package]
name = "vpxgui"
edition = "2021"

[[bin]]
name = "vpxgui"
path = "src/main.rs"


[dependencies]
shared = { path = "../shared" }
bevy = "0.15.0"
bevy_asset = "0.15.0"
bevy_asset_loader = "0.22.0"
bevy_egui = "0.32.0"
# Looks like iyes_perf_ui is no longer being maintained
# iyes_perf_ui = "0.3.0"
bevy_mini_fps = "0.1.0"
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
crossbeam-channel = "0.5.13"
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
is_executable = "1.0.4"