[package]
name = "vpxtool"
edition = "2021"
rust-version = "1.71.1"
default-run = "vpxtool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vpxtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
vpxgui = { path = "../vpxgui" }
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive", "string"] }
colored = "3.0.0"
console = "0.15.10"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
git-version = "0.3.9"
indicatif = "0.17.9"
jojodiff = "0.1.2"
log = "0.4.22"
logging_timer = "1.1.1"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.37.1", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", features = ["preserve_order"] }
shellexpand = "3.1.0"
wild = "2.2.1"
figment = { version = "0.10", features = ["toml", "env"] }

is_executable = "1.0.4"
imagesize = "0.13.0"
regex = { version = "1.11.1", features = [] }
vpin = { version = "0.17.2" }

edit = "0.1.5"
pinmame-nvram = "0.3.10"

[dev-dependencies]
pretty_assertions = "1.4.1"
