[package]
name = "vpxtool_cli"
edition = "2024"
default-run = "vpxtool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vpxtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vpxtool_shared = { path = "../vpxtool_shared" }
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive", "string"] }
colored = "3.0.0"
console = "0.15.11"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
git-version = "0.3.9"
indicatif = "0.17.11"
jojodiff = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
shellexpand = "3.1.0"
wild = "2.2.1"

is_executable = "1.0.4"
regex = { version = "1.11.1", features = [] }
vpin = { version = "0.17.4" }

edit = "0.1.5"
pinmame-nvram = "0.3.11"
image = "0.25.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.0"
