[package]
name = "vpxtool_gui"
edition = "2021"

[[bin]]
name = "vpxtool-gui"
path = "src/main.rs"


[dependencies]
vpxtool_shared = { path = "../vpxtool_shared" }
bevy = "0.15.2"
bevy_asset = "0.15.1"
bevy_dev_tools = "0.15.1"
#bevy_asset_loader = "0.22.0"
bevy_egui = "0.33.0"
# Looks like iyes_perf_ui is no longer being maintained
# iyes_perf_ui = "0.3.0"
bevy_mini_fps = "0.1.0"
#eframe = "0.30.0"
#egui_extras = { version = "0.30.0", features = ["image"] }
crossbeam-channel = "0.5.14"
is_executable = "1.0.4"

[dev-dependencies]
pretty_assertions = "1.4.1"