[package]
name = "vpxtool_gui"
edition = "2024"

[[bin]]
name = "vpxtool-gui"
path = "src/main.rs"


[dependencies]
vpxtool_shared = { path = "../vpxtool_shared" }
bevy = "0.15.3"
bevy_asset = "0.15.1"
bevy_dev_tools = "0.15.3"
#bevy_asset_loader = "0.22.0"
bevy_egui = "0.33.0"
#eframe = "0.30.0"
#egui_extras = { version = "0.30.0", features = ["image"] }
crossbeam-channel = "0.5.14"
is_executable = "1.0.4"
sysinfo = "0.33.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
