[package]
name = "libvpxtool"
edition = "2024"

[lib]

[dependencies]
vpin = { version = "0.18.0" }
#see https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
rust-ini = "0.21.1"
dirs = "6.0.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
log = "0.4.27"
figment = { version = "0.10", features = ["toml", "env"] }
dialoguer = "0.11.0"
regex = { version = "1.11.1", features = [] }
walkdir = "2.5.0"
rayon = "1.10.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
testdir = "0.9.3"
